0.02 
    - Moosified

0.01 Sun Nov 23 04:18:03 CET 2008
    - apply knf

0.00_02 Tue Nov 18 22:47:24 CET 2008
    - sync readme

0.00_01 Tue Nov 18 22:15:54 CET 2008
    - initial development release