@@ -2,8 +2,7 @@ Roles:
 * Add tests for ROLEs
 * Roles should defer to store for role lookup
 * Add ROLE lookup on custom information (like find_user)
-sub from_session:
-* Permit custom info like the find_user stuff
+
 
 * Schema qualification
 * Use a real serialization so the session doens't require a hit to the DB
@@ -12,3 +11,7 @@ Statements of direction:
 * Store should do all database interaction
 * User can /defer/ to store, but not access database
 * User class needs to be customizable like DBIx::Class
+
+DONE:
+sub from_session:
+* Permit custom info like the find_user stuff
